--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <body>
     <h1>WELCOME MY BLOG</h1>
     <p>Blog topic craet a new repo</p>
+    <img src="tm1.jfif" alt="">
+    <img src="tm2.jpg" alt="">
 </body>
 </html>
